doc/grammar.ebnf
(* ==========================================================================
   Agam Formal Grammar Specification (EBNF)
   Specification Version: 0.1.0-alpha.1
   Status: Formal Grammar Reference
   ========================================================================== *)

(* 1. Top-Level Program *)
Program             = [ ProfileDirective ] , { TopLevelItem } ;
ProfileDirective    = "@lang.base" | "@lang.base.dynamic" | "@lang.advance" ;

TopLevelItem        = FunctionDecl
                    | StructDecl
                    | EnumDecl
                    | ConstDecl
                    | UseStmt ;

(* 2. Declarations *)
FunctionDecl        = "fn" , Identifier , [ GenericParams ] , ParameterList , [ "->" , Type ] , Block ;
GenericParams       = "<" , Identifier , { "," , Identifier } , ">" ;
ParameterList       = "(" , [ Parameter , { "," , Parameter } ] , ")" ;
Parameter           = [ "mut" ] , Identifier , [ ":" , Type ] ;

StructDecl          = "struct" , Identifier , [ GenericParams ] , "{" , { StructField } , "}" ;
StructField         = Identifier , ":" , Type , [ "," ] ;

EnumDecl            = "enum" , Identifier , "{" , { EnumVariant } , "}" ;
EnumVariant         = Identifier , [ "(" , Type , { "," , Type } , ")" ] , [ "," ] ;

ConstDecl           = "const" , Identifier , ":" , Type , "=" , Expression , ";" ;
UseStmt             = "use" , Path , [ "::" , "{" , IdentifierList , "}" ] , ";" ;
Path                = Identifier , { "::" , Identifier } ;
IdentifierList      = Identifier , { "," , Identifier } ;

(* 3. Statements & Blocks *)
Block               = "{" , { Statement } , "}" (* In @lang.advance *)
                    | INDENT , { Statement } , DEDENT (* In @lang.base *) ;

Statement           = LetStmt
                    | StrictBlock
                    | IfStmt
                    | WhileStmt
                    | ForStmt
                    | ReturnStmt
                    | ExprStmt ;

LetStmt             = "let" , [ "mut" ] , Identifier , [ ":" , Type ] , [ "=" , Expression ] , [ ";" ] ;
StrictBlock         = "strict" , Block ;

IfStmt              = "if" , Expression , Block , [ "else" , ( IfStmt | Block ) ] ;
WhileStmt           = "while" , Expression , Block ;
ForStmt             = "for" , Identifier , "in" , Expression , Block ;
ReturnStmt          = "return" , [ Expression ] , [ ";" ] ;
ExprStmt            = Expression , [ ";" ] ;

(* 4. Expressions & Operators (Pratt Precedence Hierarchy) *)
Expression          = Assignment ;

Assignment          = LogicalOr , [ ( "=" | "+=" | "-=" | "*=" | "/=" ) , Assignment ] ;
LogicalOr           = LogicalAnd , { "or" | "||" , LogicalAnd } ;
LogicalAnd          = Equality , { "and" | "&&" , Equality } ;
Equality            = Relational , { ( "==" | "!=" ) , Relational } ;
Relational          = BitwiseOr , { ( "<" | "<=" | ">" | ">=" ) , BitwiseOr } ;
BitwiseOr           = BitwiseXor , { "|" , BitwiseXor } ;
BitwiseXor          = BitwiseAnd , { "^" , BitwiseAnd } ;
BitwiseAnd          = Shift , { "&" , Shift } ;
Shift               = Additive , { ( "<<" | ">>" ) , Additive } ;
Additive            = Multiplicative , { ( "+" | "-" ) , Multiplicative } ;
Multiplicative      = Unary , { ( "*" | "/" | "%" ) , Unary } ;

Unary               = ( "-" | "!" | "not" | "~" | "&" | "&mut" | "*" ) , Unary
                    | Postfix ;

Postfix             = Primary , { CallSuffix | IndexSuffix | FieldSuffix } ;
CallSuffix          = "(" , [ ArgumentList ] , ")" ;
IndexSuffix         = "[" , Expression , "]" ;
FieldSuffix         = "." , Identifier ;

ArgumentList        = Expression , { "," , Expression } ;

Primary             = Literal
                    | Identifier
                    | ArrayLiteral
                    | StructInit
                    | ClosureExpr
                    | "(" , Expression , ")" ;

ArrayLiteral        = "[" , [ Expression , { "," , Expression } ] , "]" ;
StructInit          = Identifier , "{" , [ FieldInit , { ( "," | Newline ) , FieldInit } ] , [ "," | Newline ] , "}" ;
FieldInit           = ( Identifier | StringLiteral ) , ":" , Expression ;
ClosureExpr         = ( "|" , [ ParameterList ] , "|" | "||" ) , [ "->" , Type ] , ( Expression | Block ) ;

(* 5. Types *)
Type                = PrimitiveType
                    | ArrayType
                    | ReferenceType
                    | FunctionType
                    | Path ;

PrimitiveType       = "i8" | "i16" | "i32" | "i64" | "i128" | "isize"
                    | "u8" | "u16" | "u32" | "u64" | "u128" | "usize"
                    | "f32" | "f64"
                    | "bool" | "str" | "char" | "void" ;

ArrayType           = "[" , Type , ";" , IntegerLiteral , "]" ;
ReferenceType       = "&" , [ "mut" ] , Type ;
FunctionType        = "fn" , "(" , [ TypeList ] , ")" , "->" , Type ;
TypeList            = Type , { "," , Type } ;

(* 6. Lexical Tokens & Literals *)
Literal             = IntegerLiteral | FloatLiteral | StringLiteral | CharLiteral | BooleanLiteral ;

IntegerLiteral      = [ "0x" | "0b" | "0o" ] , Digit , { Digit | "_" } , [ IntSuffix ] ;
IntSuffix           = "i8" | "i16" | "i32" | "i64" | "u8" | "u16" | "u32" | "u64" | "usize" ;

FloatLiteral        = Digit , { Digit | "_" } , "." , Digit , { Digit | "_" } , [ Exponent ] , [ FloatSuffix ] ;
Exponent            = ( "e" | "E" ) , [ "+" | "-" ] , Digit , { Digit } ;
FloatSuffix         = "f32" | "f64" ;

StringLiteral       = '"' , { StringChar | EscapeSeq } , '"' ;
CharLiteral         = "'" , ( Char | EscapeSeq ) , "'" ;
BooleanLiteral      = "true" | "false" ;

Identifier          = ( Letter | "_" ) , { Letter | Digit | "_" } ;
Letter              = "a" ... "z" | "A" ... "Z" ;
Digit               = "0" ... "9" ;
