crates/core/agam_parser/src/parser.rs
//! The main parser implementation.
//!
//! Uses recursive descent for statements/declarations and Pratt parsing
//! (precedence climbing) for expressions.

use crate::ParseError;
use agam_ast::decl::*;
use agam_ast::expr::*;
use agam_ast::pattern::*;
use agam_ast::stmt::*;
use agam_ast::types::*;
use agam_ast::*;
use agam_errors::span::{SourceId, Span};
use agam_lexer::{Token, TokenKind};

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
    next_node_id: u32,
    errors: Vec<ParseError>,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self {
            tokens,
            pos: 0,
            next_node_id: 0,
            errors: Vec::new(),
        }
    }

    fn node_id(&mut self) -> NodeId {
        let id = NodeId(self.next_node_id);
        self.next_node_id += 1;
        id
    }

    // ── Token navigation ──

    fn peek(&self) -> &Token {
        self.tokens
            .get(self.pos)
            .unwrap_or(&self.tokens[self.tokens.len() - 1])
    }

    fn peek_kind(&self) -> TokenKind {
        self.peek().kind
    }

    fn advance(&mut self) -> &Token {
        let tok = &self.tokens[self.pos.min(self.tokens.len() - 1)];
        if self.pos < self.tokens.len() {
            self.pos += 1;
        }
        tok
    }

    fn expect(&mut self, kind: TokenKind) -> Result<Token, ParseError> {
        if self.peek_kind() == kind {
            Ok(self.advance().clone())
        } else {
            Err(self.error(format!("expected {:?}, found {:?}", kind, self.peek_kind())))
        }
    }

    fn eat(&mut self, kind: TokenKind) -> bool {
        if self.peek_kind() == kind {
            self.advance();
            true
        } else {
            false
        }
    }

    fn skip_newlines(&mut self) {
        while self.peek_kind() == TokenKind::Newline
            || self.peek_kind() == TokenKind::LineComment
            || self.peek_kind() == TokenKind::BlockComment
            || self.peek_kind() == TokenKind::DocComment
        {
            self.advance();
        }
    }

    fn at_end(&self) -> bool {
        self.peek_kind() == TokenKind::Eof
    }

    fn error(&self, msg: String) -> ParseError {
        ParseError {
            message: msg,
            span: self.peek().span,
        }
    }

    // ── Module ──

    pub fn parse_module(&mut self, source_id: SourceId) -> Result<Module, Vec<ParseError>> {
        let mut decls = Vec::new();
        self.skip_newlines();
        while !self.at_end() {
            match self.parse_declaration() {
                Ok(d) => decls.push(d),
                Err(e) => {
                    self.errors.push(e);
                    self.advance();
                }
            }
            self.skip_newlines();
        }
        if self.errors.is_empty() {
            Ok(Module {
                id: self.node_id(),
                span: Span::new(source_id, 0, self.peek().span.end),
                declarations: decls,
            })
        } else {
            Err(self.errors.clone())
        }
    }

    // ── Declarations ──

    fn parse_declaration(&mut self) -> Result<Decl, ParseError> {
        self.skip_newlines();
        let span_start = self.peek().span.start;
        let vis = self.parse_visibility();
        let annotations = self.parse_annotations();

        let kind = match self.peek_kind() {
            TokenKind::Fn | TokenKind::Async => {
                DeclKind::Function(self.parse_function_decl(vis, annotations)?)
            }
            TokenKind::Struct | TokenKind::Class => {
                DeclKind::Struct(self.parse_struct_decl(vis, annotations)?)
            }
            TokenKind::Enum => DeclKind::Enum(self.parse_enum_decl(vis)?),
            TokenKind::Trait => DeclKind::Trait(self.parse_trait_decl(vis)?),
            TokenKind::Impl => DeclKind::Impl(self.parse_impl_decl()?),
            TokenKind::Mod => DeclKind::Module(self.parse_module_decl(vis)?),
            TokenKind::Use | TokenKind::Import => DeclKind::Use(self.parse_use_decl(vis)?),
            TokenKind::Type => {
                let (name, generics, ty) = self.parse_type_alias_decl()?;
                DeclKind::TypeAlias {
                    name,
                    generics,
                    ty,
                    visibility: vis,
                }
            }
            TokenKind::Effect => DeclKind::Effect(self.parse_effect_decl(vis)?),
            TokenKind::Handle => DeclKind::Handler(self.parse_handler_decl()?),
            _ => {
                let stmt = self.parse_statement()?;
                return Ok(Decl {
                    id: self.node_id(),
                    kind: DeclKind::Function(FunctionDecl {
                        name: Ident::new("__top_level__", stmt.span),
                        generics: vec![],
                        params: vec![],
                        return_type: None,
                        body: Some(Block {
                            stmts: vec![stmt],
                            expr: None,
                            span: Span::dummy(),
                        }),
                        visibility: Visibility::Private,
                        is_async: false,
                        annotations: vec![],
                        span: Span::dummy(),
                    }),
                    span: Span::new(self.peek().span.source_id, span_start, self.peek().span.end),
                    attributes: vec![],
                });
            }
        };

        Ok(Decl {
            id: self.node_id(),
            span: Span::new(self.peek().span.source_id, span_start, self.peek().span.end),
            kind,
            attributes: vec![],
        })
    }

    fn parse_visibility(&mut self) -> Visibility {
        if self.eat(TokenKind::Pub) {
            Visibility::Public
        } else {
            Visibility::Private
        }
    }

    fn parse_annotations(&mut self) -> Vec<Annotation> {
        let mut anns = Vec::new();
        while self.peek_kind() == TokenKind::At {
            let start = self.peek().span.start;
            self.advance();

            let mut name_parts = Vec::new();
            let mut end_span = start;

            while self.peek_kind() == TokenKind::Identifier {
                let t = self.advance().clone();
                name_parts.push(t.lexeme.clone());
                end_span = t.span.end;

                if self.peek_kind() == TokenKind::Dot {
                    self.advance();
                } else {
                    break;
                }
            }

            if !name_parts.is_empty() {
                let name = Ident::new(
                    name_parts.join("."),
                    Span::new(self.peek().span.source_id, start, end_span),
                );
                anns.push(Annotation {
                    name,
                    args: vec![],
                    span: Span::new(self.peek().span.source_id, start, end_span),
                });
            }
            self.skip_newlines();
        }
        anns
    }

    fn parse_generic_params(&mut self) -> Result<Vec<GenericParam>, ParseError> {
        let mut params = Vec::new();
        if self.eat(TokenKind::Lt) {
            while self.peek_kind() != TokenKind::Gt && !self.at_end() {
                let name_tok = self.expect(TokenKind::Identifier)?;
                let name = Ident::new(&name_tok.lexeme, name_tok.span);

                let mut bounds = Vec::new();
                if self.eat(TokenKind::Colon) {
                    bounds.push(self.parse_type_expr()?);
                    while self.eat(TokenKind::Plus) {
                        bounds.push(self.parse_type_expr()?);
                    }
                }

                let default = if self.eat(TokenKind::Eq) {
                    Some(self.parse_type_expr()?)
                } else {
                    None
                };

                params.push(GenericParam {
                    name,
                    bounds,
                    default,
                    span: Span::new(
                        name_tok.span.source_id,
                        name_tok.span.start,
                        self.peek().span.end,
                    ),
                });

                if !self.eat(TokenKind::Comma) {
                    break;
                }
            }
            self.expect(TokenKind::Gt)?;
        }
        Ok(params)
    }

    fn parse_function_decl(
        &mut self,
        vis: Visibility,
        annotations: Vec<Annotation>,
    ) -> Result<FunctionDecl, ParseError> {
        let is_async = self.eat(TokenKind::Async);
        let fn_tok = self.expect(TokenKind::Fn)?;
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);

        let generics = self.parse_generic_params()?;

        self.expect(TokenKind::LParen)?;
        let params = self.parse_param_list()?;
        self.expect(TokenKind::RParen)?;

        let return_type = if self.eat(TokenKind::Arrow) {
            Some(self.parse_type_expr()?)
        } else {
            None
        };

        let body = if self.eat(TokenKind::Colon) || self.peek_kind() == TokenKind::LBrace {
            Some(self.parse_block()?)
        } else {
            None
        };

        Ok(FunctionDecl {
            name,
            generics,
            params,
            return_type,
            body,
            visibility: vis,
            is_async,
            annotations,
            span: Span::new(
                fn_tok.span.source_id,
                fn_tok.span.start,
                self.peek().span.end,
            ),
        })
    }

    fn parse_param_list(&mut self) -> Result<Vec<FunctionParam>, ParseError> {
        let mut params = Vec::new();
        while self.peek_kind() != TokenKind::RParen && !self.at_end() {
            let pat = self.parse_pattern()?;
            let ty = if self.eat(TokenKind::Colon) {
                self.parse_type_expr()?
            } else {
                TypeExpr {
                    id: self.node_id(),
                    span: Span::dummy(),
                    kind: TypeExprKind::Inferred,
                    mode: TypeMode::Inferred,
                }
            };
            let default = if self.eat(TokenKind::Eq) {
                Some(self.parse_expression(0)?)
            } else {
                None
            };
            params.push(FunctionParam {
                pattern: pat,
                ty,
                default,
                span: Span::dummy(),
            });
            if !self.eat(TokenKind::Comma) {
                break;
            }
        }
        Ok(params)
    }

    fn parse_struct_decl(
        &mut self,
        vis: Visibility,
        annotations: Vec<Annotation>,
    ) -> Result<StructDecl, ParseError> {
        self.advance(); // struct/class
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);
        let generics = self.parse_generic_params()?;
        self.eat(TokenKind::Colon);
        self.skip_newlines();
        let mut fields = Vec::new();
        self.eat(TokenKind::LBrace);
        // Parse until we hit something that isn't a field
        self.skip_newlines();
        while self.peek_kind() == TokenKind::Identifier || self.peek_kind() == TokenKind::Pub {
            let fvis = self.parse_visibility();
            let fname_tok = self.expect(TokenKind::Identifier)?;
            let fname = Ident::new(&fname_tok.lexeme, fname_tok.span);
            self.expect(TokenKind::Colon)?;
            let fty = self.parse_type_expr()?;
            let default = if self.eat(TokenKind::Eq) {
                Some(self.parse_expression(0)?)
            } else {
                None
            };
            fields.push(FieldDecl {
                name: fname,
                ty: fty,
                default,
                visibility: fvis,
                span: fname_tok.span,
            });
            self.eat(TokenKind::Comma);
            self.eat(TokenKind::Semicolon);
            self.skip_newlines();
            if self.peek_kind() == TokenKind::RBrace {
                break;
            }
        }
        self.eat(TokenKind::RBrace);
        Ok(StructDecl {
            name,
            generics,
            fields,
            visibility: vis,
            annotations,
            span: name_tok.span,
        })
    }

    fn parse_enum_decl(&mut self, vis: Visibility) -> Result<EnumDecl, ParseError> {
        self.advance(); // enum
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);
        let generics = self.parse_generic_params()?;
        self.eat(TokenKind::Colon);
        self.skip_newlines();
        self.eat(TokenKind::LBrace);
        self.skip_newlines();
        let mut variants = Vec::new();
        while self.peek_kind() == TokenKind::Identifier {
            let vname_tok = self.advance().clone();
            let vname = Ident::new(&vname_tok.lexeme, vname_tok.span);
            let fields = if self.eat(TokenKind::LParen) {
                let mut types = Vec::new();
                while self.peek_kind() != TokenKind::RParen && !self.at_end() {
                    types.push(self.parse_type_expr()?);
                    if !self.eat(TokenKind::Comma) {
                        break;
                    }
                }
                self.expect(TokenKind::RParen)?;
                VariantFields::Tuple(types)
            } else if self.eat(TokenKind::LBrace) {
                let mut struct_fields = Vec::new();
                self.skip_newlines();
                while self.peek_kind() == TokenKind::Identifier
                    || self.peek_kind() == TokenKind::Pub
                {
                    let fvis = self.parse_visibility();
                    let fname_tok = self.expect(TokenKind::Identifier)?;
                    let fname = Ident::new(&fname_tok.lexeme, fname_tok.span);
                    self.expect(TokenKind::Colon)?;
                    let fty = self.parse_type_expr()?;
                    struct_fields.push(FieldDecl {
                        name: fname,
                        ty: fty,
                        default: None,
                        visibility: fvis,
                        span: fname_tok.span,
                    });
                    self.eat(TokenKind::Comma);
                    self.skip_newlines();
                    if self.peek_kind() == TokenKind::RBrace {
                        break;
                    }
                }
                self.expect(TokenKind::RBrace)?;
                VariantFields::Struct(struct_fields)
            } else {
                VariantFields::Unit
            };
            variants.push(EnumVariant {
                name: vname,
                fields,
                span: vname_tok.span,
            });
            self.eat(TokenKind::Comma);
            self.skip_newlines();
        }
        self.eat(TokenKind::RBrace);
        Ok(EnumDecl {
            name,
            generics,
            variants,
            visibility: vis,
            span: name_tok.span,
        })
    }

    fn parse_trait_decl(&mut self, vis: Visibility) -> Result<TraitDecl, ParseError> {
        self.advance(); // trait
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);
        let generics = self.parse_generic_params()?;
        self.eat(TokenKind::Colon);
        self.skip_newlines();
        self.eat(TokenKind::LBrace);
        self.skip_newlines();
        let mut items = Vec::new();
        while self.peek_kind() == TokenKind::Fn || self.peek_kind() == TokenKind::Async {
            let f = self.parse_function_decl(Visibility::Public, vec![])?;
            items.push(TraitItem::Method(f));
            self.skip_newlines();
        }
        self.eat(TokenKind::RBrace);
        Ok(TraitDecl {
            name,
            generics,
            super_traits: vec![],
            items,
            visibility: vis,
            span: name_tok.span,
        })
    }

    fn parse_impl_decl(&mut self) -> Result<ImplDecl, ParseError> {
        let start = self.advance().span; // impl
        let generics = self.parse_generic_params()?;
        let target = self.parse_type_expr()?;
        self.eat(TokenKind::Colon);
        self.skip_newlines();
        self.eat(TokenKind::LBrace);
        self.skip_newlines();
        let mut items = Vec::new();
        while self.peek_kind() == TokenKind::Fn
            || self.peek_kind() == TokenKind::Pub
            || self.peek_kind() == TokenKind::Async
        {
            items.push(self.parse_declaration()?);
            self.skip_newlines();
        }
        self.eat(TokenKind::RBrace);
        Ok(ImplDecl {
            generics,
            trait_path: None,
            target_type: target,
            items,
            span: start,
        })
    }

    fn parse_module_decl(&mut self, vis: Visibility) -> Result<ModuleDecl, ParseError> {
        self.advance(); // mod
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);
        Ok(ModuleDecl {
            name,
            body: None,
            visibility: vis,
            span: name_tok.span,
        })
    }

    fn parse_use_decl(&mut self, vis: Visibility) -> Result<UseDecl, ParseError> {
        let start = self.advance().span; // use/import
        let path = self.parse_path()?;
        let alias = if self.eat(TokenKind::As) {
            let a = self.expect(TokenKind::Identifier)?;
            Some(Ident::new(&a.lexeme, a.span))
        } else {
            None
        };
        self.eat(TokenKind::Semicolon);
        self.skip_newlines();
        Ok(UseDecl {
            path,
            alias,
            items: None,
            visibility: vis,
            span: start,
        })
    }

    fn parse_type_alias_decl(
        &mut self,
    ) -> Result<(Ident, Vec<GenericParam>, TypeExpr), ParseError> {
        self.advance(); // type
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);
        let generics = self.parse_generic_params()?;
        self.expect(TokenKind::Eq)?;
        let ty = self.parse_type_expr()?;
        self.eat(TokenKind::Semicolon);
        self.skip_newlines();
        Ok((name, generics, ty))
    }

    /// Parse `effect Name { fn op1(params) -> RetType; fn op2(...); }`
    fn parse_effect_decl(&mut self, vis: Visibility) -> Result<EffectDecl, ParseError> {
        let start = self.advance().span; // effect
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);
        self.eat(TokenKind::Colon);
        self.skip_newlines();
        self.expect(TokenKind::LBrace)?;
        self.skip_newlines();

        let mut operations = Vec::new();
        while self.peek_kind() == TokenKind::Fn {
            self.advance(); // fn
            let op_name_tok = self.expect(TokenKind::Identifier)?;
            let op_name = Ident::new(&op_name_tok.lexeme, op_name_tok.span);
            self.expect(TokenKind::LParen)?;
            let mut params = Vec::new();
            while self.peek_kind() != TokenKind::RParen && !self.at_end() {
                let pname_tok = self.expect(TokenKind::Identifier)?;
                let pname = Ident::new(&pname_tok.lexeme, pname_tok.span);
                self.expect(TokenKind::Colon)?;
                let pty = self.parse_type_expr()?;
                params.push((pname, pty));
                if !self.eat(TokenKind::Comma) {
                    break;
                }
            }
            self.expect(TokenKind::RParen)?;
            let return_type = if self.eat(TokenKind::Arrow) {
                Some(self.parse_type_expr()?)
            } else {
                None
            };
            self.eat(TokenKind::Semicolon);
            self.skip_newlines();
            operations.push(EffectOp {
                name: op_name,
                params,
                return_type,
                span: op_name_tok.span,
            });
        }
        self.expect(TokenKind::RBrace)?;

        Ok(EffectDecl {
            name,
            operations,
            visibility: vis,
            span: start,
        })
    }

    /// Parse `handle handler_name for EffectName { fn op(params): body }`
    fn parse_handler_decl(&mut self) -> Result<HandlerDecl, ParseError> {
        let start = self.advance().span; // handle
        let name_tok = self.expect(TokenKind::Identifier)?;
        let name = Ident::new(&name_tok.lexeme, name_tok.span);

        // expect `for` keyword
        self.expect(TokenKind::For)?;

        let effect_name_tok = self.expect(TokenKind::Identifier)?;
        let effect_name = Ident::new(&effect_name_tok.lexeme, effect_name_tok.span);
        self.eat(TokenKind::Colon);
        self.skip_newlines();
        self.expect(TokenKind::LBrace)?;
        self.skip_newlines();

        let mut clauses = Vec::new();
        while self.peek_kind() == TokenKind::Fn {
            self.advance(); // fn
            let op_name_tok = self.expect(TokenKind::Identifier)?;
            let op_name = Ident::new(&op_name_tok.lexeme, op_name_tok.span);
            self.expect(TokenKind::LParen)?;
            let mut params = Vec::new();
            while self.peek_kind() != TokenKind::RParen && !self.at_end() {
                let pname_tok = self.expect(TokenKind::Identifier)?;
                params.push(Ident::new(&pname_tok.lexeme, pname_tok.span));
                if !self.eat(TokenKind::Comma) {
                    break;
                }
            }
            self.expect(TokenKind::RParen)?;
            self.eat(TokenKind::Colon);
            let body = self.parse_expression(0)?;
            self.eat(TokenKind::Semicolon);
            self.skip_newlines();
            clauses.push(HandlerClause {
                op_name,
                params,
                body,
                span: op_name_tok.span,
            });
        }
        self.expect(TokenKind::RBrace)?;

        Ok(HandlerDecl {
            name,
            effect_name,
            clauses,
            span: start,
        })
    }

    // ── Statements ──

    fn parse_statement(&mut self) -> Result<Stmt, ParseError> {
        self.skip_newlines();
        let start = self.peek().span.start;

        let kind = match self.peek_kind() {
            TokenKind::Let => self.parse_let_stmt()?,
            TokenKind::Var => self.parse_var_stmt()?,
            TokenKind::Const => self.parse_const_stmt()?,
            TokenKind::Return => {
                self.advance();
                let e = if !self.at_stmt_end() {
                    Some(self.parse_expression(0)?)
                } else {
                    None
                };
                StmtKind::Return(e)
            }
            TokenKind::Break => {
                self.advance();
                StmtKind::Break(None)
            }
            TokenKind::Continue => {
                self.advance();
                StmtKind::Continue
            }
            TokenKind::While => self.parse_while_stmt()?,
            TokenKind::For => self.parse_for_stmt()?,
            TokenKind::Loop => {
                self.advance();
                StmtKind::Loop {
                    body: self.parse_block()?,
                }
            }
            TokenKind::If => self.parse_if_stmt()?,
            _ => StmtKind::Expression(self.parse_expression(0)?),
        };
        self.eat(TokenKind::Semicolon);
        self.skip_newlines();
        Ok(Stmt {
            id: self.node_id(),
            span: Span::new(self.peek().span.source_id, start, self.peek().span.end),
            kind,
        })
    }

    fn at_stmt_end(&self) -> bool {
        matches!(
            self.peek_kind(),
            TokenKind::Newline | TokenKind::Semicolon | TokenKind::Eof | TokenKind::RBrace
        )
    }

    fn parse_let_stmt(&mut self) -> Result<StmtKind, ParseError> {
        self.advance(); // let
        // Agam bindings are mutable by default. `let mut` remains accepted as
        // backwards-compatible syntax sugar.
        let _legacy_mut = self.eat(TokenKind::Mut);
        let mutable = true;
        let pattern = self.parse_pattern()?;
        let ty = if self.eat(TokenKind::Colon) {
            Some(self.parse_type_expr()?)
        } else {
            None
        };
        let value = if self.eat(TokenKind::Eq) {
            Some(self.parse_expression(0)?)
        } else {
            None
        };
        Ok(StmtKind::Let {
            pattern,
            ty,
            value,
            mutable,
        })
    }

    /// Parse a `var` statement (dynamic typing mode).
    /// `var x = 42` — type resolved at runtime, Python-like.
    /// `var x: dyn = anything` — explicitly dynamic.
    fn parse_var_stmt(&mut self) -> Result<StmtKind, ParseError> {
        self.advance(); // var
        let mutable = true; // var is always mutable
        let pattern = self.parse_pattern()?;
        let ty = if self.eat(TokenKind::Colon) {
            let mut t = self.parse_type_expr()?;
            t.mode = TypeMode::Dynamic; // var always uses dynamic mode
            Some(t)
        } else {
            Some(TypeExpr {
                id: self.node_id(),
                span: Span::dummy(),
                kind: TypeExprKind::Dynamic,
                mode: TypeMode::Dynamic,
            })
        };
        let value = if self.eat(TokenKind::Eq) {
            Some(self.parse_expression(0)?)
        } else {
            None
        };
        Ok(StmtKind::Let {
            pattern,
            ty,
            value,
            mutable,
        })
    }

    fn parse_const_stmt(&mut self) -> Result<StmtKind, ParseError> {
        self.advance(); // const
        let name_tok = self.expect(TokenKind::Identifier)?;
        let ty = if self.eat(TokenKind::Colon) {
            Some(self.parse_type_expr()?)
        } else {
            None
        };
        self.expect(TokenKind::Eq)?;
        let value = self.parse_expression(0)?;
        Ok(StmtKind::Const {
            name: Ident::new(&name_tok.lexeme, name_tok.span),
            ty,
            value,
        })
    }

    fn parse_while_stmt(&mut self) -> Result<StmtKind, ParseError> {
        self.advance(); // while
        let cond = self.parse_expression(0)?;
        let body = self.parse_block()?;
        Ok(StmtKind::While {
            condition: cond,
            body,
        })
    }

    fn parse_for_stmt(&mut self) -> Result<StmtKind, ParseError> {
        self.advance(); // for
        let pattern = self.parse_pattern()?;
        self.expect(TokenKind::In)?;
        let iterable = self.parse_expression(0)?;
        let body = self.parse_block()?;
        Ok(StmtKind::For {
            pattern,
            iterable,
            body,
        })
    }

    fn parse_if_stmt(&mut self) -> Result<StmtKind, ParseError> {
        self.advance(); // if
        let cond = self.parse_expression(0)?;
        let then = self.parse_block()?;
        let else_br = if self.eat(TokenKind::Else) {
            if self.peek_kind() == TokenKind::If {
                Some(ElseBranch::ElseIf(Box::new(self.parse_statement()?)))
            } else {
                Some(ElseBranch::Else(self.parse_block()?))
            }
        } else {
            None
        };
        Ok(StmtKind::If {
            condition: cond,
            then_branch: then,
            else_branch: else_br,
        })
    }

    // ── Block ──

    fn parse_block(&mut self) -> Result<Block, ParseError> {
        self.skip_newlines();
        let start = self.peek().span.start;
        let has_brace = self.eat(TokenKind::LBrace);
        if !has_brace {
            self.eat(TokenKind::Colon);
        }
        self.skip_newlines();

        let has_indent = if !has_brace {
            self.eat(TokenKind::Indent)
        } else {
            false
        };

        let mut stmts = Vec::new();
        while !self.at_end() {
            if has_brace && self.peek_kind() == TokenKind::RBrace {
                break;
            }
            if has_indent && self.peek_kind() == TokenKind::Dedent {
                break;
            }
            // Heuristic: stop after one statement in base mode if there was no indent
            if !has_brace && !has_indent && !stmts.is_empty() {
                break;
            }
            match self.parse_statement() {
                Ok(s) => stmts.push(s),
                Err(e) => {
                    self.errors.push(e);
                    self.advance();
                    break;
                }
            }
            self.skip_newlines();
        }
        if has_brace {
            self.eat(TokenKind::RBrace);
        }
        if has_indent {
            self.eat(TokenKind::Dedent);
        }

        Ok(Block {
            stmts,
            expr: None,
            span: Span::new(self.peek().span.source_id, start, self.peek().span.end),
        })
    }

    // ── Expressions (Pratt parser) ──

    pub fn parse_expression(&mut self, min_prec: u8) -> Result<Expr, ParseError> {
        let mut left = self.parse_prefix()?;

        while let Some((prec, assoc)) = self.infix_binding_power() {
            if prec < min_prec {
                break;
            }
            let next_min = if assoc == Assoc::Left { prec + 1 } else { prec };
            left = self.parse_infix(left, next_min)?;
        }

        // Contextual struct literal: only for dotted paths like `module.Type { ... }`
        if self.peek_kind() == TokenKind::LBrace
            && let ExprKind::FieldAccess { .. } = &left.kind
        {
            left = self.parse_infix(left, 14)?;
        }

        Ok(left)
    }

    fn parse_prefix(&mut self) -> Result<Expr, ParseError> {
        let tok = self.peek().clone();
        let id = self.node_id();
